charts/templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP 
  ports:
    - name: http
      port: 80
  selector:
    app: frontend
