charts/templates/frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aicollaboration.com
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - aicollaboration.com
    secretName: tls-latest-aicollaboration.com
  rules:
  - host: aicollaboration.com
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 80
